content/kapacitor/v0.13/nodes/default_node.md
---
title: DefaultNode
note: Auto generated by tickdoc

menu:
  kapacitor_013:
    name: Default
    identifier: default_node
    weight: 30
    parent: nodes
---

Defaults fields and tags on data points. 

Example: 


```javascript
    stream
        |default()
            .field('value', 0.0)
            .tag('host', '')
```

The above example will set the field `value` to float64(0) if it does not already exist 
It will also set the tag `host` to string(&#34;&#34;) if it does not already exist. 

Available Statistics: 

* fields_defaulted -- number of fields that were missing 
* tags_defaulted -- number of tags that were missing 



Index
-----

### Properties

-	[Field](/kapacitor/v0.13/nodes/default_node/#field)
-	[Tag](/kapacitor/v0.13/nodes/default_node/#tag)
-	[Tags](/kapacitor/v0.13/nodes/default_node/#tags)

### Chaining Methods

-	[Alert](/kapacitor/v0.13/nodes/default_node/#alert)
-	[Bottom](/kapacitor/v0.13/nodes/default_node/#bottom)
-	[Count](/kapacitor/v0.13/nodes/default_node/#count)
-	[Deadman](/kapacitor/v0.13/nodes/default_node/#deadman)
-	[Default](/kapacitor/v0.13/nodes/default_node/#default)
-	[Derivative](/kapacitor/v0.13/nodes/default_node/#derivative)
-	[Distinct](/kapacitor/v0.13/nodes/default_node/#distinct)
-	[Elapsed](/kapacitor/v0.13/nodes/default_node/#elapsed)
-	[Eval](/kapacitor/v0.13/nodes/default_node/#eval)
-	[First](/kapacitor/v0.13/nodes/default_node/#first)
-	[GroupBy](/kapacitor/v0.13/nodes/default_node/#groupby)
-	[HttpOut](/kapacitor/v0.13/nodes/default_node/#httpout)
-	[InfluxDBOut](/kapacitor/v0.13/nodes/default_node/#influxdbout)
-	[Join](/kapacitor/v0.13/nodes/default_node/#join)
-	[Last](/kapacitor/v0.13/nodes/default_node/#last)
-	[Log](/kapacitor/v0.13/nodes/default_node/#log)
-	[Max](/kapacitor/v0.13/nodes/default_node/#max)
-	[Mean](/kapacitor/v0.13/nodes/default_node/#mean)
-	[Median](/kapacitor/v0.13/nodes/default_node/#median)
-	[Min](/kapacitor/v0.13/nodes/default_node/#min)
-	[Percentile](/kapacitor/v0.13/nodes/default_node/#percentile)
-	[Sample](/kapacitor/v0.13/nodes/default_node/#sample)
-	[Shift](/kapacitor/v0.13/nodes/default_node/#shift)
-	[Spread](/kapacitor/v0.13/nodes/default_node/#spread)
-	[Stats](/kapacitor/v0.13/nodes/default_node/#stats)
-	[Stddev](/kapacitor/v0.13/nodes/default_node/#stddev)
-	[Sum](/kapacitor/v0.13/nodes/default_node/#sum)
-	[Top](/kapacitor/v0.13/nodes/default_node/#top)
-	[Union](/kapacitor/v0.13/nodes/default_node/#union)
-	[Where](/kapacitor/v0.13/nodes/default_node/#where)
-	[Window](/kapacitor/v0.13/nodes/default_node/#window)

Properties
----------

Property methods modify state on the calling node.
They do not add another node to the pipeline, and always return a reference to the calling node.
Property methods are marked using the `.` operator.


### Field

Define a field default. 


```javascript
node.field(name string, value interface{})
```


### Tag

Define a tag default. 


```javascript
node.tag(name string, value string)
```


### Tags

Set of tags to default 


```javascript
node.tags(value map[string]string)
```


Chaining Methods
----------------

Chaining methods create a new node in the pipeline as a child of the calling node.
They do not modify the calling node.
Chaining methods are marked using the `|` operator.


### Alert

Create an alert node, which can trigger alerts. 


```javascript
node|alert()
```

Returns: [AlertNode](/kapacitor/v0.13/nodes/alert_node/)


### Bottom

Select the bottom `num` points for `field` and sort by any extra tags or fields. 


```javascript
node|bottom(num int64, field string, fieldsAndTags ...string)
```

Returns: [InfluxQLNode](/kapacitor/v0.13/nodes/influx_q_l_node/)


### Count

Count the number of points. 


```javascript
node|count(field string)
```

Returns: [InfluxQLNode](/kapacitor/v0.13/nodes/influx_q_l_node/)


### Deadman

Helper function for creating an alert on low throughput, aka deadman&#39;s switch. 

- Threshold -- trigger alert if throughput drops below threshold in points/interval. 
- Interval -- how often to check the throughput. 
- Expressions -- optional list of expressions to also evaluate. Useful for time of day alerting. 

Example: 


```javascript
    var data = stream
        |from()...
    // Trigger critical alert if the throughput drops below 100 points per 10s and checked every 10s.
    data
        |deadman(100.0, 10s)
    //Do normal processing of data
    data...
```

The above is equivalent to this 
Example: 


```javascript
    var data = stream
        |from()...
    // Trigger critical alert if the throughput drops below 100 points per 10s and checked every 10s.
    data
        |stats(10s)
        |derivative('collected')
            .unit(10s)
            .nonNegative()
        |alert()
            .id('node \'stream0\' in task \'{{ .TaskName }}\'')
            .message('{{ .ID }} is {{ if eq .Level "OK" }}alive{{ else }}dead{{ end }}: {{ index .Fields "collected" | printf "%0.3f" }} points/10s.')
            .crit(lamdba: "collected" <= 100.0)
    //Do normal processing of data
    data...
```

The `id` and `message` alert properties can be configured globally via the &#39;deadman&#39; configuration section. 

Since the [AlertNode](/kapacitor/v0.13/nodes/alert_node/) is the last piece it can be further modified as normal. 
Example: 


```javascript
    var data = stream
        |from()...
    // Trigger critical alert if the throughput drops below 100 points per 1s and checked every 10s.
    data
        |deadman(100.0, 10s)
            .slack()
            .channel('#dead_tasks')
    //Do normal processing of data
    data...
```

You can specify additional lambda expressions to further constrain when the deadman&#39;s switch is triggered. 
Example: 


```javascript
    var data = stream
        |from()...
    // Trigger critical alert if the throughput drops below 100 points per 10s and checked every 10s.
    // Only trigger the alert if the time of day is between 8am-5pm.
    data
        |deadman(100.0, 10s, lambda: hour("time") >= 8 AND hour("time") <= 17)
    //Do normal processing of data
    data...
```



```javascript
node|deadman(threshold float64, interval time.Duration, expr ...tick.Node)
```

Returns: [AlertNode](/kapacitor/v0.13/nodes/alert_node/)


### Default

Create a node that can set defaults for missing tags or fields. 


```javascript
node|default()
```

Returns: [DefaultNode](/kapacitor/v0.13/nodes/default_node/)


### Derivative

Create a new node that computes the derivative of adjacent points. 


```javascript
node|derivative(field string)
```

Returns: [DerivativeNode](/kapacitor/v0.13/nodes/derivative_node/)


### Distinct

Produce batch of only the distinct points. 


```javascript
node|distinct(field string)
```

Returns: [InfluxQLNode](/kapacitor/v0.13/nodes/influx_q_l_node/)


### Elapsed

Compute the elapsed time between points 


```javascript
node|elapsed(field string, unit time.Duration)
```

Returns: [InfluxQLNode](/kapacitor/v0.13/nodes/influx_q_l_node/)


### Eval

Create an eval node that will evaluate the given transformation function to each data point. 
A list of expressions may be provided and will be evaluated in the order they are given 
and results of previous expressions are made available to later expressions. 


```javascript
node|eval(expressions ...tick.Node)
```

Returns: [EvalNode](/kapacitor/v0.13/nodes/eval_node/)


### First

Select the first point. 


```javascript
node|first(field string)
```

Returns: [InfluxQLNode](/kapacitor/v0.13/nodes/influx_q_l_node/)


### GroupBy

Group the data by a set of tags. 

Can pass literal * to group by all dimensions. 
Example: 


```javascript
    |groupBy(*)
```



```javascript
node|groupBy(tag ...interface{})
```

Returns: [GroupByNode](/kapacitor/v0.13/nodes/group_by_node/)


### HttpOut

Create an http output node that caches the most recent data it has received. 
The cached data is available at the given endpoint. 
The endpoint is the relative path from the API endpoint of the running task. 
For example if the task endpoint is at &#34;/api/v1/task/&lt;task_name&gt;&#34; and endpoint is 
&#34;top10&#34;, then the data can be requested from &#34;/api/v1/task/&lt;task_name&gt;/top10&#34;. 


```javascript
node|httpOut(endpoint string)
```

Returns: [HTTPOutNode](/kapacitor/v0.13/nodes/http_out_node/)


### InfluxDBOut

Create an influxdb output node that will store the incoming data into InfluxDB. 


```javascript
node|influxDBOut()
```

Returns: [InfluxDBOutNode](/kapacitor/v0.13/nodes/influx_d_b_out_node/)


### Join

Join this node with other nodes. The data is joined on timestamp. 


```javascript
node|join(others ...Node)
```

Returns: [JoinNode](/kapacitor/v0.13/nodes/join_node/)


### Last

Select the last point. 


```javascript
node|last(field string)
```

Returns: [InfluxQLNode](/kapacitor/v0.13/nodes/influx_q_l_node/)


### Log

Create a node that logs all data it receives. 


```javascript
node|log()
```

Returns: [LogNode](/kapacitor/v0.13/nodes/log_node/)


### Max

Select the maximum point. 


```javascript
node|max(field string)
```

Returns: [InfluxQLNode](/kapacitor/v0.13/nodes/influx_q_l_node/)


### Mean

Compute the mean of the data. 


```javascript
node|mean(field string)
```

Returns: [InfluxQLNode](/kapacitor/v0.13/nodes/influx_q_l_node/)


### Median

Compute the median of the data. Note, this method is not a selector, 
if you want the median point use .percentile(field, 50.0). 


```javascript
node|median(field string)
```

Returns: [InfluxQLNode](/kapacitor/v0.13/nodes/influx_q_l_node/)


### Min

Select the minimum point. 


```javascript
node|min(field string)
```

Returns: [InfluxQLNode](/kapacitor/v0.13/nodes/influx_q_l_node/)


### Percentile

Select a point at the given percentile. This is a selector function, no interpolation between points is performed. 


```javascript
node|percentile(field string, percentile float64)
```

Returns: [InfluxQLNode](/kapacitor/v0.13/nodes/influx_q_l_node/)


### Sample

Create a new node that samples the incoming points or batches. 

One point will be emitted every count or duration specified. 


```javascript
node|sample(rate interface{})
```

Returns: [SampleNode](/kapacitor/v0.13/nodes/sample_node/)


### Shift

Create a new node that shifts the incoming points or batches in time. 


```javascript
node|shift(shift time.Duration)
```

Returns: [ShiftNode](/kapacitor/v0.13/nodes/shift_node/)


### Spread

Compute the difference between min and max points. 


```javascript
node|spread(field string)
```

Returns: [InfluxQLNode](/kapacitor/v0.13/nodes/influx_q_l_node/)


### Stats

Create a new stream of data that contains the internal statistics of the node. 
The interval represents how often to emit the statistics based on real time. 
This means the interval time is independent of the times of the data points the source node is receiving. 


```javascript
node|stats(interval time.Duration)
```

Returns: [StatsNode](/kapacitor/v0.13/nodes/stats_node/)


### Stddev

Compute the standard deviation. 


```javascript
node|stddev(field string)
```

Returns: [InfluxQLNode](/kapacitor/v0.13/nodes/influx_q_l_node/)


### Sum

Compute the sum of all values. 


```javascript
node|sum(field string)
```

Returns: [InfluxQLNode](/kapacitor/v0.13/nodes/influx_q_l_node/)


### Top

Select the top `num` points for `field` and sort by any extra tags or fields. 


```javascript
node|top(num int64, field string, fieldsAndTags ...string)
```

Returns: [InfluxQLNode](/kapacitor/v0.13/nodes/influx_q_l_node/)


### Union

Perform the union of this node and all other given nodes. 


```javascript
node|union(node ...Node)
```

Returns: [UnionNode](/kapacitor/v0.13/nodes/union_node/)


### Where

Create a new node that filters the data stream by a given expression. 


```javascript
node|where(expression tick.Node)
```

Returns: [WhereNode](/kapacitor/v0.13/nodes/where_node/)


### Window

Create a new node that windows the stream by time. 

NOTE: Window can only be applied to stream edges. 


```javascript
node|window()
```

Returns: [WindowNode](/kapacitor/v0.13/nodes/window_node/)

